crates/snapshot-tests/tests/snapshots/parser__bad_booleans__false_trailing.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[UnquotedString]: string values must be quoted, expected string literal at `foo`
  ┌─ false_trailing:1:7
  │
1 │ foo = false2
  │       ^^^^^^ string is not quoted


error: string values must be quoted, expected string literal at `foo`
 --> false_trailing:1:7
  |
1 | foo = false2
  |       ^^^^^^ string is not quoted
Error {
    kind: "UnquotedString",
    message: "string values must be quoted, expected string literal",
    span: 6..12,
    path: Some(
        "foo",
    ),
}
